--- a/requirements.txt
+++ b/requirements.txt
@@ -175,6 +175,8 @@ streamlit==1.50.0 ; python_full_version < '3.10'
     # via cross-asset-monitoring
 streamlit==1.52.1 ; python_full_version >= '3.10'
     # via cross-asset-monitoring
+tabulate==0.9.0
+    # via cross-asset-monitoring
 tenacity==9.1.2
     # via streamlit
 toml==0.10.2
